# mixmaster

./: .env  .gitignore  .vercelignore  Dockerfile  README.md  classic_cocktails.json  docker-compose.yml  logs_result.json  manage.py  pyproject.toml  requirements.txt  test_mongo.py  vercel.json
apps/drinks/: admin.py  apps.py  fields.py  models.py  serializers.py  urls.py  views.py
apps/drinks/management/commands/: populate_reference_data.py
apps/drinks/templates/admin/drinks/: base.html  delete.html  form.html  index.html  list.html
apps/drinks/templatetags/: drinks_tags.py
apps/users/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/users/management/commands/: create_superuser.py
apps/users/migrations/: 0001_initial.py  0002_user_is_admin.py
config/: urls.py  wsgi.py
config/settings/: base.py  development.py  production.py
scripts/: init_admin.py  populate_drinks.py  remove_duplicates.py  vercel_init.sh
